--- a/source/assets/stylesheets/structures/_progress.sass
+++ b/source/assets/stylesheets/structures/_progress.sass
@@ -12,10 +12,10 @@
 // *************************************
 
 .progress
-  +transition(width $b-transitionSpeed ease-in-out)
   background: $progress-background
   bottom: 0
   height: $progress-height
   left: 0
   position: absolute
+  transition: width $b-transitionSpeed ease-in-out
   z-index: 20
