--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -21,7 +21,7 @@
 
   .no-touch &
     @if $slide-transition
-      +transition(all $slide-transition-speed $slide-transition-delay ease-in-out)
+      transition: all $slide-transition-speed $slide-transition-delay ease-in-out
 
 // -------------------------------------
 //   Modifiers
@@ -123,7 +123,7 @@
 
     .no-touch &
       @if $slide-transition
-        +transform(scale(0.5))
+        transform: scale(0.5)
 
 // ----- Subdue ----- //
 
@@ -158,7 +158,7 @@
 
     .no-touch &
       @if $slide-transition
-        +transform(translateX(50%))
+        transform: translateX(50%)
 
 // ----- Translate Y ----- //
 
@@ -168,7 +168,7 @@
 
     .no-touch &
       @if $slide-transition
-        +transform(translateY(50%))
+        transform: translateY(50%)
 
 // ----- Video ----- //
 
@@ -194,14 +194,14 @@
 
   .no-touch &
     @if $slide-transition
-      +transition(all $slide-transition-speed ease-in-out)
+      transition: all $slide-transition-speed ease-in-out
 
   .slide-content
     @extend .fauxShow
 
     .no-touch &
       @if $slide-transition
-        +transition(all $slide-transition-speed $slide-transition-delay ease-in-out)
+        transition: all $slide-transition-speed $slide-transition-delay ease-in-out
 
 // Scale
 
@@ -211,7 +211,7 @@
 
     .no-touch &
       @if $slide-transition
-        +transform(scale(1))
+        transform: scale(1)
 
 // Translate X
 
@@ -221,7 +221,7 @@
 
     .no-touch &
       @if $slide-transition
-        +transform(translateX(0))
+        transform: translateX(0)
 
 // Translate Y
 
@@ -231,7 +231,7 @@
 
     .no-touch &
       @if $slide-transition
-        +transform(translateY(0))
+        transform: translateY(0)
 
 // ----- No Transition ----- //
 
@@ -256,7 +256,7 @@
 
   .no-touch &
     @if $slide-transition
-      +transition(all $slide-transition-speed ease-in-out)
+      transition: all $slide-transition-speed ease-in-out
 
   +respond-to($breakpoint-l)
     margin: $b-space-l
