Switch to viewport units for font sizing

--- a/source/assets/stylesheets/foundation/_config.sass
+++ b/source/assets/stylesheets/foundation/_config.sass
@@ -116,15 +116,15 @@ $b-fontFamily-heading: 'Oswald', sans-serif !default
 $b-fontFamily-light-fontWeight: 300 !default
 $b-fontFamily-mono: Courier, monospace !default
 $b-fontFamily: 'Merriweather', sans-serif !default
-$b-fontSize-h1: 420% !default
-$b-fontSize-h2: 320% !default
-$b-fontSize-h3: 220% !default
-$b-fontSize-h4: 175% !default
-$b-fontSize-l: 150% !default
-$b-fontSize-m: 100% !default
-$b-fontSize-s: 80% !default
-$b-fontSize-xl: 200% !default
-$b-fontSize-xs: 60% !default
+$b-fontSize-h1: 12vmax !default
+$b-fontSize-h2: 10vmax !default
+$b-fontSize-h3: 8vmax !default
+$b-fontSize-h4: 7vmax !default
+$b-fontSize-xs: 3vmax !default
+$b-fontSize-s: 4vmax !default
+$b-fontSize-m: 5vmax !default
+$b-fontSize-l: 6vmax !default
+$b-fontSize-xl: 7vmax !default
 $b-fontSize: 30px !default
 $b-lineHeight: 1.5 !default
 $b-textShadow: 6px 6px 0 rgba(#000, 0.25), 12px 12px 0 rgba(#000, 0.1) !default
