Add slide highlight and underline styles

--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -261,6 +261,13 @@
   +respond-to($breakpoint-l)
     margin: $b-space-l
 
+// ----- Highlight ----- //
+
+.slide-highlight
+  background-color: rgba(#000, 0.2)
+  padding-left: $b-space-xs
+  padding-right: $b-space-xs
+
 // ----- Image ----- //
 
 .slide-img
@@ -276,6 +283,12 @@
 .slide-media
   @extend .card
   @extend .card--s
+
+// ----- Underline ----- //
+
+.slide-underline
+  border-bottom: $b-border
+  border-bottom-color: currentColor
 
 // ----- Video ----- //
 
