Update slide image styles

--- a/source/assets/stylesheets/structures/_slide.sass
+++ b/source/assets/stylesheets/structures/_slide.sass
@@ -271,6 +271,12 @@
 // ----- Image ----- //
 
 .slide-img
+  display: block
+  margin: 0 auto
+
+// Circle
+
+.slide-img--circle
   border-radius: 50%
 
 // Medium
