--- a/source/assets/stylesheets/foundation/_tools.sass
+++ b/source/assets/stylesheets/foundation/_tools.sass
@@ -157,7 +157,9 @@
 //   Opacity
 // -------------------------------------
 
-.oph
+.op1of4
+  opacity: 0.25
+.op1of2
   opacity: 0.5
 
 // -------------------------------------
